# conversorUnidades

./: .gitignore  CMakeLists.txt  README.md  area.c  area.h  comprimento  comprimento.c  comprimento.h  conversorUnidades  dados.c  dados.h  main.c  massa.c  massa.h  potencia.c  potencia.h  temperatura  temperatura.c  temperatura.h  tempo.c  tempo.h  velocidade.c  velocidade.h  volume.c  volume.h
output/: comprimento  dados
tests/: test_area.c
